--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dřevěné výrobky - ruční práce</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      text-align: center;
+      padding: 40px;
+    }
+    h1 {
+      color: #5a3825;
+    }
+    .product {
+      background: white;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 400px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <h1>Ruční dřevěné výrobky</h1>
+  <p>Vítejte na mém webu! Nabízím ručně vyráběné misky, prkénka, obrázky a další drobnosti ze dřeva.</p>
+  
+  <div class="product">
+    <h2>Dřevěná miska</h2>
+    <p>Každá miska je originál, ručně soustružená z kvalitního dřeva.</p>
+  </div>
+
+  <div class="product">
+    <h2>Kuchyňské prkénko</h2>
+    <p>Praktické a krásné prkénko z dubového dřeva.</p>
+  </div>
+
+  <p>Kontakt: <strong>info@mojedrevo.cz</strong></p>
+</body>
+</html>
 
